Shuffle around bulk update forms to avoid Bootstrap 3 layout issues.

--- a/frontend/assets/top_containers.bulk.css
+++ b/frontend/assets/top_containers.bulk.css
@@ -30,6 +30,7 @@
 }
 .selected-record-list {
     max-height: 180px;
+    margin-top: 1em;
     overflow: auto;
 }
 
@@ -41,4 +42,8 @@
 #bulk_operation_results .linked-records-listing.count-1,
 #bulkActionBarcodeRapidEntryModal .linked-records-listing.count-1 {
     list-style: none;
+}
+
+#bulk_update_form .modal-body {
+    padding-bottom: 3em;
 }
